pacakage issue solved

--- a/src/makefile
+++ b/src/makefile
@@ -18,7 +18,7 @@ all:
 main:
 	source $(QUESTA)
 	make clean
-	vlog -sv +acc +cover +fcover +define apb_top.sv "+incdir+/tools/mentor/questasim_10.6c/questasim/uvm-1.1d/../verilog_src/uvm-1.1d/src"
+	vlog -sv +acc +cover +fcover +define top.sv "+incdir+/tools/mentor/questasim_10.6c/questasim/uvm-1.1d/../verilog_src/uvm-1.1d/src"
 	vsim -vopt work.top -voptargs=+acc=npr -assertdebug -l simulation.log -coverage -c -do "coverage save -onexit -assert -directive -cvg -codeAll coverage.ucdb; run -all; exit"
 	vcover report -html coverage.ucdb -htmldir covReport -details
 
@@ -30,7 +30,7 @@ view:
 	firefox ./covReport/index.html
 
 compile:
-	vlog -sv apb_top.sv
+	vlog -sv top.sv
 
 simulate:
 	vsim -c top +UVM_VERBOSITY=UVM_MEDIUM -do "run -all;exit"
